Prevent breaks in <Simple> list items

--- a/global.css
+++ b/global.css
@@ -111,6 +111,7 @@ nav.locale a.current {
     counter-increment: count;
     position: relative;
     z-index: 0;
+    break-inside: avoid;
 }
 
 #simple ol li::before {
